Fixed issue where text was obscured behind header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@ body {
 	margin: 0px;
   padding: 0px;
 	background-color: whitesmoke;
-  
 }
 
 .fixed-top {
@@ -56,4 +55,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
+ }
+
+ div > h2 {
+  margin-top:7%;
  }
